[package]
name = "itext"
version = "0.4.0"
edition = "2021"
description = "Safe rust bindings to the iText 9 PDF generation library written in Java"
readme = "./README.md"
repository = "https://github.com/MrFriendly-B-V/itext-rs"
license = "MIT OR Apache-2.0"
keywords = ["pdf", "itext"]
categories = ["api-bindings", "external-ffi-bindings", "multimedia::encoding"]

[features]
bundled = ["color-eyre"]

[dependencies]
jni = "0.21.1"
strum_macros = "0.27.2"
convert_case = "0.8.0"

[build-dependencies]
color-eyre = { version = "0.6.2", optional = true }
cfg-if = "1.0.0"
